@@ -1,3 +1,6 @@
+* Wed Mar 19 2014 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.3-1
+- bump libdexela requirement to 1.1.0
+- use new libdexela API for FMT file
 * Tue Oct 15 2013 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.2-2
 - bump libuca requirement to 1.3.0
 * Wed Mar 27 2013 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.2-1
